--- a/pom.xml
+++ b/pom.xml
@@ -46,15 +46,15 @@
     <properties>
         <embedded-cassandra.version>3.0.3</embedded-cassandra.version>
         <junit.version>4.13</junit.version>
-        <logback.version>1.1.8</logback.version>
         <lombok.version>1.18.12</lombok.version>
+        <mock.web.server.version>4.6.0</mock.web.server.version>
         <powsybl-case-datasource-client.version>1.0.0-SNAPSHOT</powsybl-case-datasource-client.version>
-        <powsybl-core.version>3.7.1</powsybl-core.version>
-        <powsybl-rte-core.version>2.14.1</powsybl-rte-core.version>
-        <powsybl-open-loadflow.version>0.7.0</powsybl-open-loadflow.version>
+        <powsybl-core.version>3.8.0</powsybl-core.version>
+        <powsybl-rte-core.version>2.15.0</powsybl-rte-core.version>
+        <powsybl-open-loadflow.version>0.8.0</powsybl-open-loadflow.version>
         <powsybl-balances-adjustment.version>1.2.2</powsybl-balances-adjustment.version>
         <powsybl-network-store.version>1.0.0-SNAPSHOT</powsybl-network-store.version>
-        <powsybl-single-line-diagram.version>1.7.2</powsybl-single-line-diagram.version>
+        <powsybl-single-line-diagram.version>1.8.0</powsybl-single-line-diagram.version>
         <spring-cloud.version>Hoxton.SR3</spring-cloud.version>
         <springboot.version>2.2.9.RELEASE</springboot.version>
         <springdoc-openapi.version>1.4.8</springdoc-openapi.version>
@@ -65,20 +65,15 @@
     <dependencyManagement>
         <dependencies>
             <!-- overrides of imports -->
-            <!-- powsybl-core 3.6 specifies logback-classic but not logback-core,
-                 leading to mismatched versions. Remove when fixed in powsybl-core -->
-            <dependency>
-                <groupId>ch.qos.logback</groupId>
-                <artifactId>logback-core</artifactId>
-                <version>${logback.version}</version>
-            </dependency>
+
             <!-- downgrade of metrics-core needed for compatibility with cassandra-driver < 4 . To remove when we upgrade to >4 -->
             <dependency>
                 <groupId>io.dropwizard.metrics</groupId>
                 <artifactId>metrics-core</artifactId>
                 <version>${metricscore.version}</version>
             </dependency>
-            <!-- to remove when powsybl upgrades to 4.13 -->
+
+            <!-- 4.13.1 is incompatible with spring-boot-starter-test.To remove once fixed https://github.com/spring-projects/spring-boot/issues/23876 -->
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
@@ -496,6 +491,16 @@
             </dependency>
 
             <!-- project specific dependencies (also overrides imports, but separate for clarity) -->
+            <dependency>
+                <groupId>com.squareup.okhttp3</groupId>
+                <artifactId>okhttp</artifactId>
+                <version>${mock.web.server.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.squareup.okhttp3</groupId>
+                <artifactId>mockwebserver</artifactId>
+                <version>${mock.web.server.version}</version>
+            </dependency>
             <dependency>
                 <groupId>io.springfox</groupId>
                 <artifactId>springfox-swagger-ui</artifactId>
