--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
     <groupId>org.gridsuite</groupId>
     <artifactId>gridsuite-dependencies</artifactId>
-    <version>7</version>
+    <version>7-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>GridSuite Dependencies</name>
@@ -49,15 +49,15 @@
         <lombok.version>1.18.12</lombok.version>
         <mock.web.server.version>4.6.0</mock.web.server.version>
         <powsybl-case-datasource-client.version>1.0.0-SNAPSHOT</powsybl-case-datasource-client.version>
-        <powsybl-core.version>4.1.2</powsybl-core.version>
-        <powsybl-rte-core.version>3.1.0</powsybl-rte-core.version>
-        <powsybl-open-loadflow.version>0.10.1</powsybl-open-loadflow.version>
-        <powsybl-balances-adjustment.version>1.4.0</powsybl-balances-adjustment.version>
+        <powsybl-core.version>4.2.0</powsybl-core.version>
+        <powsybl-rte-core.version>3.2.0</powsybl-rte-core.version>
+        <powsybl-open-loadflow.version>0.11.0</powsybl-open-loadflow.version>
+        <powsybl-balances-adjustment.version>1.5.0</powsybl-balances-adjustment.version>
         <powsybl-network-store.version>1.0.0-SNAPSHOT</powsybl-network-store.version>
-        <powsybl-single-line-diagram.version>2.1.0</powsybl-single-line-diagram.version>
-        <powsybl-dynawo.version>1.1.0</powsybl-dynawo.version>
-        <spring-cloud.version>2020.0.1</spring-cloud.version>
-        <springboot.version>2.4.5</springboot.version>
+        <powsybl-single-line-diagram.version>2.2.0</powsybl-single-line-diagram.version>
+        <powsybl-dynawo.version>1.2.0</powsybl-dynawo.version>
+        <spring-cloud.version>Hoxton.SR3</spring-cloud.version>
+        <springboot.version>2.2.9.RELEASE</springboot.version>
         <springdoc-openapi.version>1.4.8</springdoc-openapi.version>
         <springfox.version>2.9.2</springfox.version>
         <websocket-tyrus.version>1.17</websocket-tyrus.version>
