--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
     <groupId>org.gridsuite</groupId>
     <artifactId>gridsuite-dependencies</artifactId>
-    <version>8-SNAPSHOT</version>
+    <version>8</version>
     <packaging>pom</packaging>
 
     <name>GridSuite Dependencies</name>
@@ -56,8 +56,8 @@
         <powsybl-network-store.version>1.0.0-SNAPSHOT</powsybl-network-store.version>
         <powsybl-single-line-diagram.version>2.2.0</powsybl-single-line-diagram.version>
         <powsybl-dynawo.version>1.2.0</powsybl-dynawo.version>
-        <spring-cloud.version>Hoxton.SR3</spring-cloud.version>
-        <springboot.version>2.2.9.RELEASE</springboot.version>
+        <spring-cloud.version>2020.0.3</spring-cloud.version>
+        <springboot.version>2.4.7</springboot.version>
         <springdoc-openapi.version>1.4.8</springdoc-openapi.version>
         <springfox.version>2.9.2</springfox.version>
         <websocket-tyrus.version>1.17</websocket-tyrus.version>
