--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
         <powsybl-network-store.version>1.0.0-SNAPSHOT</powsybl-network-store.version>
         <powsybl-single-line-diagram.version>2.4.0</powsybl-single-line-diagram.version>
         <powsybl-dynawo.version>1.4.0</powsybl-dynawo.version>
+        <powsybl-ws-commons.version>1.0.0</powsybl-ws-commons.version>
         <spring-cloud.version>2020.0.3</spring-cloud.version>
         <springboot.version>2.4.7</springboot.version>
         <springdoc-openapi.version>1.4.8</springdoc-openapi.version>
@@ -151,6 +152,13 @@
                 <groupId>com.powsybl</groupId>
                 <artifactId>powsybl-balances-adjustment</artifactId>
                 <version>${powsybl-balances-adjustment.version}</version>
+            </dependency>
+
+            <!-- powsybl ws commons -->
+            <dependency>
+                <groupId>com.powsybl</groupId>
+                <artifactId>powsybl-ws-commons</artifactId>
+                <version>${powsybl-ws-commons.version}</version>
             </dependency>
 
             <!-- powsybl rte core multimodule (no bom) -->
