--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
     <groupId>org.gridsuite</groupId>
     <artifactId>gridsuite-dependencies</artifactId>
-    <version>14-SNAPSHOT</version>
+    <version>14</version>
     <packaging>pom</packaging>
 
     <name>GridSuite Dependencies</name>
@@ -49,13 +49,13 @@
         <lombok.version>1.18.12</lombok.version>
         <mock.web.server.version>4.6.0</mock.web.server.version>
         <powsybl-case-datasource-client.version>1.0.0-SNAPSHOT</powsybl-case-datasource-client.version>
-        <powsybl-core.version>4.5.1</powsybl-core.version>
-        <powsybl-rte-core.version>3.5.0</powsybl-rte-core.version>
-        <powsybl-open-loadflow.version>0.14.0</powsybl-open-loadflow.version>
-        <powsybl-balances-adjustment.version>1.8.0</powsybl-balances-adjustment.version>
+        <powsybl-core.version>4.6.1</powsybl-core.version>
+        <powsybl-rte-core.version>3.6.0</powsybl-rte-core.version>
+        <powsybl-open-loadflow.version>0.16.0</powsybl-open-loadflow.version>
+        <powsybl-balances-adjustment.version>1.10.0</powsybl-balances-adjustment.version>
         <powsybl-network-store.version>1.0.0-SNAPSHOT</powsybl-network-store.version>
-        <powsybl-single-line-diagram.version>2.5.1</powsybl-single-line-diagram.version>
-        <powsybl-dynawo.version>1.5.0</powsybl-dynawo.version>
+        <powsybl-single-line-diagram.version>2.7.0</powsybl-single-line-diagram.version>
+        <powsybl-dynawo.version>1.6.0</powsybl-dynawo.version>
         <powsybl-ws-commons.version>1.1.0</powsybl-ws-commons.version>
         <spring-cloud.version>2020.0.3</spring-cloud.version>
         <springboot.version>2.4.7</springboot.version>
