--- a/pom.xml
+++ b/pom.xml
@@ -57,28 +57,35 @@
         <powsybl-single-line-diagram.version>2.9.1</powsybl-single-line-diagram.version>
         <powsybl-dynawo.version>1.7.0</powsybl-dynawo.version>
         <powsybl-ws-commons.version>1.1.0</powsybl-ws-commons.version>
-        <spring-cloud.version>2020.0.3</spring-cloud.version>
-        <springboot.version>2.4.7</springboot.version>
-        <springdoc-openapi.version>1.4.8</springdoc-openapi.version>
+        <spring-cloud.version>2021.0.1</spring-cloud.version>
+        <springboot.version>2.6.6</springboot.version>
+        <springdoc-openapi.version>1.5.13</springdoc-openapi.version>
         <websocket-tyrus.version>1.17</websocket-tyrus.version>
         <metricscore.version>3.2.6</metricscore.version>
+        <jackson.version>2.13.2.20220328</jackson.version>
+        <commons-lang3.version>3.9</commons-lang3.version>
     </properties>
     <dependencyManagement>
         <dependencies>
             <!-- overrides of imports -->
 
-            <!-- downgrade of metrics-core needed for compatibility with cassandra-driver < 4 . To remove when we upgrade to >4 -->
+            <!-- The version 3.4 put by powsybl cause a problem. Swagger need the version 3.9: https://github.com/powsybl/powsybl-network-conversion-server/pull/64 -->
+            <!-- java.lang.NoSuchMethodError: 'boolean org.apache.commons.lang3.math.NumberUtils.isCreatable(java.lang.String)' -->
             <dependency>
-                <groupId>io.dropwizard.metrics</groupId>
-                <artifactId>metrics-core</artifactId>
-                <version>${metricscore.version}</version>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${commons-lang3.version}</version>
             </dependency>
 
-            <!-- 4.13.1 is incompatible with spring-boot-starter-test.To remove once fixed https://github.com/spring-projects/spring-boot/issues/23876 -->
+            <!-- The version 2.10 put by Powsybl cause a problem. spring boot 2.6 needs at least 2.13: https://github.com/FasterXML/jackson-databind/issues/2683 -->
+            <!-- java.lang.NoSuchMethodError: 'boolean com.fasterxml.jackson.databind.SerializationConfig.hasExplicitTimeZone()' -->
+            <!-- Use the version from spring boot 2.6.6 which contains the fix for the  spring 4 shell CVE -->
             <dependency>
-                <groupId>junit</groupId>
-                <artifactId>junit</artifactId>
-                <version>${junit.version}</version>
+                <groupId>com.fasterxml.jackson</groupId>
+                <artifactId>jackson-bom</artifactId>
+                <version>${jackson.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
 
             <!-- imports -->
