--- a/pom.xml
+++ b/pom.xml
@@ -44,108 +44,19 @@
     </scm>
 
     <properties>
-        <lombok.version>1.18.24</lombok.version>
-        <mock.web.server.version>4.6.0</mock.web.server.version>
-        <powsybl-dependencies.version>1.2.0</powsybl-dependencies.version>
-        <powsybl-case-datasource-client.version>1.0.0-SNAPSHOT</powsybl-case-datasource-client.version>
-        <powsybl-network-store.version>1.0.0-SNAPSHOT</powsybl-network-store.version>
-        <powsybl-rte-core.version>3.9.0</powsybl-rte-core.version>
-        <powsybl-ws-commons.version>1.2.0</powsybl-ws-commons.version>
-        <spring-cloud.version>2021.0.1</spring-cloud.version>
-        <springboot.version>2.6.6</springboot.version>
-        <springdoc-openapi.version>1.5.13</springdoc-openapi.version>
-        <websocket-tyrus.version>1.17</websocket-tyrus.version>
-        <jackson.version>2.13.2.20220328</jackson.version>
-        <commons-lang3.version>3.9</commons-lang3.version>
+        <powsybl-ws-dependencies.version>1.0.0-SNAPSHOT</powsybl-ws-dependencies.version>
+        <powsybl-rte-core.version>3.10.0</powsybl-rte-core.version>
     </properties>
+
     <dependencyManagement>
         <dependencies>
-            <!-- overrides of imports -->
-
-            <!-- The version 3.4 put by powsybl cause a problem. Swagger need the version 3.9: https://github.com/powsybl/powsybl-network-conversion-server/pull/64 -->
-            <!-- java.lang.NoSuchMethodError: 'boolean org.apache.commons.lang3.math.NumberUtils.isCreatable(java.lang.String)' -->
-            <dependency>
-                <groupId>org.apache.commons</groupId>
-                <artifactId>commons-lang3</artifactId>
-                <version>${commons-lang3.version}</version>
-            </dependency>
-
-            <!-- The version 2.10 put by Powsybl cause a problem. spring boot 2.6 needs at least 2.13: https://github.com/FasterXML/jackson-databind/issues/2683 -->
-            <!-- java.lang.NoSuchMethodError: 'boolean com.fasterxml.jackson.databind.SerializationConfig.hasExplicitTimeZone()' -->
-            <!-- Use the version from spring boot 2.6.6 which contains the fix for the  spring 4 shell CVE -->
-            <dependency>
-                <groupId>com.fasterxml.jackson</groupId>
-                <artifactId>jackson-bom</artifactId>
-                <version>${jackson.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-
             <!-- imports -->
             <dependency>
                 <groupId>com.powsybl</groupId>
-                <artifactId>powsybl-dependencies</artifactId>
-                <version>${powsybl-dependencies.version}</version>
+                <artifactId>powsybl-ws-dependencies</artifactId>
+                <version>${powsybl-ws-dependencies.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-dependencies</artifactId>
-                <version>${springboot.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-dependencies</artifactId>
-                <version>${spring-cloud.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-
-            <!-- project specific dependencies (also overrides imports, but separate for clarity) -->
-            <dependency>
-                <groupId>com.squareup.okhttp3</groupId>
-                <artifactId>okhttp</artifactId>
-                <version>${mock.web.server.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.squareup.okhttp3</groupId>
-                <artifactId>mockwebserver</artifactId>
-                <version>${mock.web.server.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.powsybl</groupId>
-                <artifactId>powsybl-case-datasource-client</artifactId>
-                <version>${powsybl-case-datasource-client.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.glassfish.tyrus.bundles</groupId>
-                <artifactId>tyrus-standalone-client</artifactId>
-                <version>${websocket-tyrus.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.projectlombok</groupId>
-                <artifactId>lombok</artifactId>
-                <version>${lombok.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springdoc</groupId>
-                <artifactId>springdoc-openapi-webflux-ui</artifactId>
-                <version>${springdoc-openapi.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springdoc</groupId>
-                <artifactId>springdoc-openapi-ui</artifactId>
-                <version>${springdoc-openapi.version}</version>
-            </dependency>
-
-            <!-- powsybl ws commons -->
-            <dependency>
-                <groupId>com.powsybl</groupId>
-                <artifactId>powsybl-ws-commons</artifactId>
-                <version>${powsybl-ws-commons.version}</version>
             </dependency>
 
             <!-- powsybl rte core multimodule (no bom) -->
@@ -153,23 +64,6 @@
                 <groupId>com.rte-france.powsybl</groupId>
                 <artifactId>powsybl-hades2-integration</artifactId>
                 <version>${powsybl-rte-core.version}</version>
-            </dependency>
-
-            <!-- powsybl-network-store multimodule (no bom) -->
-            <dependency>
-                <groupId>com.powsybl</groupId>
-                <artifactId>powsybl-network-store-iidm-impl</artifactId>
-                <version>${powsybl-network-store.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.powsybl</groupId>
-                <artifactId>powsybl-network-store-client</artifactId>
-                <version>${powsybl-network-store.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.powsybl</groupId>
-                <artifactId>powsybl-network-store-model</artifactId>
-                <version>${powsybl-network-store.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
