--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
     </scm>
 
     <properties>
-        <powsybl-ws-dependencies.version>1.0.0-SNAPSHOT</powsybl-ws-dependencies.version>
+        <powsybl-ws-dependencies.version>1.0.0</powsybl-ws-dependencies.version>
         <powsybl-rte-core.version>3.10.0</powsybl-rte-core.version>
     </properties>
 
