--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
     <groupId>org.gridsuite</groupId>
     <artifactId>gridsuite-dependencies</artifactId>
-    <version>23-SNAPSHOT</version>
+    <version>23</version>
     <packaging>pom</packaging>
 
     <name>GridSuite Dependencies</name>
@@ -44,7 +44,7 @@
     </scm>
 
     <properties>
-        <powsybl-ws-dependencies.version>2.2.0-SNAPSHOT</powsybl-ws-dependencies.version>
+        <powsybl-ws-dependencies.version>2.2.0</powsybl-ws-dependencies.version>
         <powsybl-rte-core.version>3.13.0</powsybl-rte-core.version>
     </properties>
 
