--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
     <groupId>org.gridsuite</groupId>
     <artifactId>gridsuite-dependencies</artifactId>
-    <version>32-SNAPSHOT</version>
+    <version>32</version>
     <packaging>pom</packaging>
 
     <name>GridSuite Dependencies</name>
@@ -44,7 +44,7 @@
     </scm>
 
     <properties>
-        <powsybl-ws-dependencies.version>2.12.0</powsybl-ws-dependencies.version>
+        <powsybl-ws-dependencies.version>2.13.0</powsybl-ws-dependencies.version>
         <gridsuite-filter.version>1.0.11</gridsuite-filter.version>
     </properties>
 
