--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
     </scm>
 
     <properties>
-        <powsybl-ws-dependencies.version>2.16.0-SNAPSHOT</powsybl-ws-dependencies.version>
+        <powsybl-ws-dependencies.version>2.16.0</powsybl-ws-dependencies.version>
         <gridsuite-filter.version>1.0.14</gridsuite-filter.version>
     </properties>
 
