--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
   run-release:
     uses: powsybl/github-ci/.github/workflows/release-backend-lib-generic.yml@859a4effdaa9c5e79684378f39778fd8d06df3c5
     with:
-      githubappId: ${{ vars.POWSYBL_ACTIONS_APPID }}
+      githubappId: ${{ vars.GRIDSUITE_ACTIONS_APPID }}
       versionType: ${{ github.event.inputs.versionType }}
     secrets:
-      githubappPrivateKey: ${{ secrets.POWSYBL_ACTIONS_SECRET }}
+      githubappPrivateKey: ${{ secrets.GRIDSUITE_ACTIONS_SECRET }}
