--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
     </scm>
 
     <properties>
-        <powsybl-ws-dependencies.version>2.20.0</powsybl-ws-dependencies.version>
+        <powsybl-ws-dependencies.version>2.21.0-SNAPSHOT</powsybl-ws-dependencies.version>
         <gridsuite-filter.version>1.2.0</gridsuite-filter.version>
         <network-modification.version>0.9.0</network-modification.version>
     </properties>
