--- a/pom.xml
+++ b/pom.xml
@@ -45,8 +45,8 @@
 
     <properties>
         <powsybl-ws-dependencies.version>2.21.0-SNAPSHOT</powsybl-ws-dependencies.version>
-        <gridsuite-filter.version>1.2.0</gridsuite-filter.version>
-        <network-modification.version>0.9.0</network-modification.version>
+        <gridsuite-filter.version>1.4.0-SNAPSHOT</gridsuite-filter.version>
+        <network-modification.version>0.13.0-SNAPSHOT</network-modification.version>
     </properties>
 
     <dependencyManagement>
