--- a/pom.xml
+++ b/pom.xml
@@ -44,9 +44,9 @@
     </scm>
 
     <properties>
-        <powsybl-ws-dependencies.version>2.21.0-SNAPSHOT</powsybl-ws-dependencies.version>
-        <gridsuite-filter.version>1.4.0-SNAPSHOT</gridsuite-filter.version>
-        <network-modification.version>0.15.0-SNAPSHOT</network-modification.version>
+        <powsybl-ws-dependencies.version>2.21.0</powsybl-ws-dependencies.version>
+        <gridsuite-filter.version>1.4.0</gridsuite-filter.version>
+        <network-modification.version>0.15.0</network-modification.version>
     </properties>
 
     <dependencyManagement>
