--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
     <groupId>org.gridsuite</groupId>
     <artifactId>gridsuite-dependencies</artifactId>
-    <version>41.1.0-SNAPSHOT</version>
+    <version>42.1.0</version>
     <packaging>pom</packaging>
 
     <name>GridSuite Dependencies</name>
@@ -47,6 +47,7 @@
         <powsybl-ws-dependencies.version>2.22.1</powsybl-ws-dependencies.version>
         <gridsuite-filter.version>1.5.0</gridsuite-filter.version>
         <network-modification.version>0.24.0</network-modification.version>
+        <gridsuite-computation.version>1.0.0</gridsuite-computation.version>
     </properties>
 
     <dependencyManagement>
@@ -70,6 +71,11 @@
                 <groupId>org.gridsuite</groupId>
                 <artifactId>gridsuite-network-modification</artifactId>
                 <version>${network-modification.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.gridsuite</groupId>
+                <artifactId>gridsuite-computation</artifactId>
+                <version>${gridsuite-computation.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
