--- a/pom.xml
+++ b/pom.xml
@@ -44,10 +44,10 @@
     </scm>
 
     <properties>
-        <powsybl-ws-dependencies.version>2.24.0</powsybl-ws-dependencies.version>
-        <gridsuite-filter.version>1.8.0</gridsuite-filter.version>
-        <network-modification.version>0.34.0</network-modification.version>
-        <gridsuite-computation.version>1.3.0</gridsuite-computation.version>
+        <powsybl-ws-dependencies.version>2.25.0-SNAPSHOT</powsybl-ws-dependencies.version>
+        <gridsuite-filter.version>1.13.0-SNAPSHOT</gridsuite-filter.version>
+        <network-modification.version>0.45.0-SNAPSHOT</network-modification.version>
+        <gridsuite-computation.version>1.5.0-SNAPSHOT</gridsuite-computation.version>
     </properties>
 
     <dependencyManagement>
