--- a/pom.xml
+++ b/pom.xml
@@ -44,10 +44,10 @@
     </scm>
 
     <properties>
-        <powsybl-ws-dependencies.version>2.27.0-SNAPSHOT</powsybl-ws-dependencies.version>
-        <gridsuite-filter.version>1.13.0-SNAPSHOT</gridsuite-filter.version>
-        <network-modification.version>0.47.0-SNAPSHOT</network-modification.version>
-        <gridsuite-computation.version>1.5.0-SNAPSHOT</gridsuite-computation.version>
+        <powsybl-ws-dependencies.version>2.27.0</powsybl-ws-dependencies.version>
+        <gridsuite-filter.version>1.13.0</gridsuite-filter.version>
+        <network-modification.version>0.48.0</network-modification.version>
+        <gridsuite-computation.version>1.6.0</gridsuite-computation.version>
     </properties>
 
     <dependencyManagement>
